# rum-pedal

./: Cargo.toml  README.md
events/: Cargo.toml
events/examples/: standard_example.rs
events/src/: StandardEvents.rs  lib.rs
midi/: Cargo.toml
midi/examples/: standard_example.rs
midi/src/: button.rs  lib.rs  midi_function.rs  rum.rs
